2002-11-23  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.h (public): Combat class with options.
	* actors.cc:  Optionally show hits on screen.

2002-11-22  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc (Game_window): Don't show new screen res. if in gump mode.
	* gumps/Gump_manager.cc: Paint at start of do_modal_gump().  The
	back-saving is no longer needed.

2002-11-21  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps/Spellbook_gump.cc (Spellbook_gump): Use correct font so
	that the circles and spell-counts get palette animation.
	(Spellbook_gump): Show turning page (what a pain!)

2002-11-09  Dancer Vesperman <dancer@users.sourceforge.net>
	* configure.in: --enable-mmx	(default: off)
	* configure.in: --enable-3dnow (default: off)
	* vec.h: Explanatory comment.

2002-11-09  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: For theft, see if NPC is facing Avatar.
	* objs/objs.cc: get_dir_facing().

2002-11-08  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Implement sound-effect eggs.
	* mapedit/eggeddit.cc:  SFX eggs.

2002-11-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/execbox.*: don't compile this for win32

2002-11-04  Max Horn  <max@quendi.de>
	* conf/Configuration.*, conf/XMLEntity.*: some cleanup (in function args,
	  using 'const string &' instead of just 'string' or 'const string' is more
	  efficient as the string doesn't have to be cloned temporarily)
	* menulist.cc: do not swallow certain command combos (Cmd-Q, Alt-X, ...) when
	  nothing is selected
	* game.cc, file/utils.*: Added and make use of clone_system_path()

2002-11-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: fixed division by zero
	* shapes/Makefile.am: removed outdated OMIT_DEPENDENCIES
	* mapedit/compile.cc: std::string
	* mapedit/execbox.cc: #include <iostream>

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/font.cc: fixed hang in french BG
